# term-800

./: .gitignore  Makefile  README.md  launch.json  mkdocs.yml  mypy.ini  pyproject.toml
src/: Settings.py  main.py
src/ai/: Assistant.py  Chat.py  Conversation.py  ConvoHistory.py  ExecGuardian.py  ThoughtNode.py  TokenPricing.py
src/ai/thoughts/: AnswerValidateThought.py  ComplexityThought.py  EntryThought.py  PlanThought.py  QueryThought.py  __init__.py
src/chat/: Chat.py  CmdChat.py
src/shell/: LogStream.py  RemoteShell.py
tests/: test_Conversation.py  test_Settings.py  test_TokenPricing.py  test_main.py
tests/ai/: test_Assistant.py  test_Chat.py  test_Conversation.py  test_ConvoHistory.py  test_ExecGuardian.py  test_ThoughtNodes.py  test_TokenPricing.py
tests/ai/thoughts/: test_AnswerValidateThought.py  test_ComplexityThought.py  test_EntryThought.py  test_PlanThought.py  test_QueryThought.py
tests/chat/: test_Chat.py  test_CmdChat.py
tests/shell/: test_LogStream.py  test_RemoteShell.py
